--- a/LoRA/scripts/training/configs/chronos-t5-small-lora.yaml
+++ b/LoRA/scripts/training/configs/chronos-t5-small-lora.yaml
@@ -1,5 +1,6 @@
 training_data_paths:
-- "kernelsynth-data.arrow"
+- "example.arrow" 
+#- "kernelsynth-data.arrow"
 probability:
 - 1.0
 context_length: 512
