--- a/LoRA/scripts/training/configs/chronos-t5-small-lora.yaml
+++ b/LoRA/scripts/training/configs/chronos-t5-small-lora.yaml
@@ -7,7 +7,8 @@ context_length: 512
 prediction_length: 64
 min_past: 60
 # max_steps: 200_000
-max_steps: 1000
+# max_steps: 1000
+max_steps: 10
 save_steps: 100_000
 log_steps: 500
 per_device_train_batch_size: 32
